--- a/config/database.yml
+++ b/config/database.yml
@@ -23,25 +23,25 @@ default: &default
 
 development:
   <<: *default
-  database: quotes_development
+  database: anonymous-quotes-v2_development
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
   # When left blank, postgres will use the default role. This is
   # the same name as the operating system user that initialized the database.
-  username: krzysztof
+  #username: anonymous-quotes-v2
 
   # The password associated with the postgres role (username).
-  password:
+  #password:
 
   # Connect on a TCP socket. Omitted by default since the client uses a
   # domain socket that doesn't need configuration. Windows does not have
   # domain sockets, so uncomment these lines.
-  host: 127.0.0.1
+  #host: localhost
 
   # The TCP port the server listens on. Defaults to 5432.
   # If your server runs on a different port number, change accordingly.
-  port: 5432
+  #port: 5432
 
   # Schema search path. The server defaults to $user,public
   #schema_search_path: myapp,sharedapp,public
@@ -57,11 +57,7 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: quotes_test
-  host: 127.0.0.1
-  port: 5432
-  username: krzysztof
-  password:
+  database: anonymous-quotes-v2_test
 
 # As with config/secrets.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -84,6 +80,6 @@ test:
 #
 production:
   <<: *default
-  database: quotes_production
-  username: quotes
-  password: <%= ENV['QUOTES_DATABASE_PASSWORD'] %>
+  database: anonymous-quotes-v2_production
+  username: anonymous-quotes-v2
+  password: <%= ENV['ANONYMOUS-QUOTES-V2_DATABASE_PASSWORD'] %>
